# LLM

./: .gitignore  README.md  langchain-llamacpp-chatbot.py  langchain-ollama-chatbot.py  openchat-cli.py  openchat-gradio.py  openchat.py  pyproject.toml  transformers-chatbot-gradio.py
langchain/: chains-01.py  chatbot-llama-cpp-01.py  chatbot-llama-cpp-02.py  ctransformers.py  langchain-llamacpp-chatbot.py
ollama/: basic.py  basic_chain.py  chatbot1.py  chatbot2.py  chatbot3.py  rag-headlines.py  rag-question.py  requests-ollama-chatbot.py
transformers/: backup.py  chatbot-cli.py  chatbot-gradio.py  conversational.py  ctransformer.py  sentiment-analysis.py  summarization.py  summarizer-chatbot.py  text-classification.py  transformers-chatbot-cli.py  vanilla-chatbot-gradio.py
