[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Jean-Marc Barozet <jbarozet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.0.24"
langchain = "^0.1.9"
llama-cpp-python = "^0.2.51"
gradio = "^4.19.2"
streamlit = "^1.31.1"
bs4 = "^0.0.2"
chromadb = "^0.4.23"
langchainhub = "^0.1.14"
transformers = "^4.38.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
ctransformers = "^0.2.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
